# hydra

./: .gitignore  CMakeLists.txt  README.md  build.fish  build_deps.sh  exp.fish
examples/: mul_ne_const_eqv_ne.ll  mul_ne_const_eqv_ne.opt
include/klee/Config/: config.h
include/souper/Extractor/: Solver.h
include/souper/Generalize/: Generalize.h  Reducer.h
include/souper/Infer/: AliveDriver.h  Invariants.h  SynthUtils.h
include/souper/Inst/: Inst.h
include/souper/Tool/: CandidateMapUtils.h  GetSolver.h.in
include/souper/Util/: DfaUtils.h
lib/: KleeSolverStub.cpp
lib/Codegen/: Codegen.cpp
lib/Extractor/: Candidates.cpp  ExprBuilder.cpp  KLEEBuilder.cpp  Solver.cpp
lib/Generalize/: Generalize.cpp  Reducer.cpp
lib/Infer/: AbstractInterpreter.cpp  AliveDriver.cpp  ConstantSynthesis.cpp  EnumerativeSynthesis.cpp  Interpreter.cpp  Invariants.cpp  Pruning.cpp  SynthUtils.cpp
lib/Inst/: Inst.cpp
lib/KVStore/: KVStore.cpp
lib/Parser/: Parser.cpp
lib/Pass/: Pass.cpp
lib/SMTLIB2/: Solver.cpp
lib/Tool/: CandidateMapUtils.cpp
test/: lit.cfg
test/Generalize/: addc.opt  addshlsub.opt  addsub.opt  ctpop.opt  fshl.opt  maskoff.opt  multoshl.opt  nonneg.opt  shiftmask.opt  shrink.opt  shrinkdiff.opt  smax.opt  widthchange.opt
tools/: hydra.cpp  matcher-gen.cpp  souper-check.cpp  souper.cpp
tools/pass-generator/: CMakeLists.txt  HowTo.md
tools/pass-generator/src/: gen.cpp.inc  template.cpp
utils/: cache_dump.in  cache_infer.in  cache_to_dir.py  file_to_dir-cand.sh  file_to_dir.sh  find-all-constants.sh  mclang.in  parallel.sh
